# primitect

./: .gitmodules  README.md
cpp/: .gitignore  CMakeLists.txt  Info.plist  README.md  primitect-builder-ios.sh
cpp/cgal_test/: .gitignore  CMakeLists.txt  main_cgal2ourres.cpp  main_cgal_write_points.cpp
cpp/cmake_modules/: CGALConfig.cmake  FindEigen3.cmake
cpp/detect_objects/: CMakeLists.txt  detection_metrics.h  main_cone_dr.cpp  main_cylinder_dr.cpp  main_plane_dr.cpp  main_refine_cylinders.cpp  main_refine_planes.cpp  main_refine_spheres.cpp  main_sphere_dr.cpp  main_voting_sample.cpp  main_voting_sample_lib.cpp
cpp/include/: Timer.h
cpp/include/detector/: ConeDetector.h  ConeVotingTable.h  CylinderDetector.h  CylinderVotingTable.h  PlaneConeDetector.h  PlaneCylinderDetector.h  PlaneDetector.h  PlaneSphereDetector.h  PpfDetector.h  PrimitiveDetector.h  SphereDetector.h  SphereVotingTable.h  detectors.h
cpp/include/objects/: Cone.h  Cylinder.h  MyObject.h  Plane.h  Sphere.h
cpp/include/pcd/: PointCloudData.cpp  PointCloudData.h
cpp/include/sampling/: PcSampler.hpp
cpp/include/shapefit/: ConeOptimizer.h  CylinderOptimizer.h  LocalParamGraff13.h  LocalParamS2.h  LocalParamTheta.h  PlaneOptimizer.h  ShapeOptimizer.h  SphereOptimizer.h  TruncatedLoss.h  optimizers.h
cpp/track_object/: CMakeLists.txt  main_track_cone.cpp  main_track_cone_ransac.cpp  main_track_cylinder.cpp  main_track_cylinder_ransac.cpp  main_track_sphere.cpp  main_track_sphere_ransac.cpp
data/: README.md
data/primitect/: 717416.ply  README.md
data/primitect/render_scripts/: RenderCones.m  RenderCylinders.m  RenderPlanes.m  RenderPrimitives.m  RenderSpheres.m  RenderSyntheticAll.m
data/redwood_lod/: README.md  RedwoodToPly.m  extract_first_frames.sh  pcwrite_xyz.m  range2points.m
data/redwood_lod/cylinders/cut2m/: 01220.ply  01220.xyz
ex_results/primitect/: 717416_cones.txt  717416_cylinders.txt  717416_planes.txt  717416_spheres.txt
ex_results/redwood_lod/cylinders/: 01220_cylinders.txt
visualization/: VisualizeExampleResults.m
visualization/include/: create_overlay.m  distinguishable_colors.m
visualization/include/get_inliers/: get_inliers_cone.m  get_inliers_cylinder.m  get_inliers_sphere.m
visualization/include/pc_dist/: dist_cone.m  dist_cylinder.m  dist_plane.m  dist_sphere.m  grad_cone.m  grad_cylinder.m  grad_plane.m  grad_sphere.m  min_dist.m
visualization/include/pc_vis/: pcshow_dist.m  pcshow_labels.m  pcshow_normals.m
visualization/overlay_rgb/: object_overlay.m
visualization/plot_points_3d/: generate_labels.m  plot_labels.m  plot_min_dist.m
